--- a/gabut/bersyukur.html
+++ b/gabut/bersyukur.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- Jquery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Hello, world!</title>
+    <title>Survey bersyukur</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 shadow
             ">
         <div class="container">
-            <a class="navbar-brand" href="#home">Davis Aji</a>
+            <a class="navbar-brand" href="../index.html">Davis Aji</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../gabut/bersyukur.html">Home</a>
                     </li>
                 </ul>
             </div>
