--- a/gabut/bersyukur.html
+++ b/gabut/bersyukur.html
@@ -10,7 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- My CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <!--<link rel="stylesheet" href="../assets/css/style.css" />-->
+    <style type="text/css">
+        .jumbotron {
+            padding-top: 6rem;
+            padding-bottom: 100%;
+            background-color: #e2edff;
+        }
+    </style>
     <!-- Jquery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Survey bersyukur</title>
