--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <style type="text/css">
+        .jumbotron {
+            padding-top: 6rem;
+            padding-bottom: 100%;
+            background-color: #e2edff;
+        }
+
+        section {
+            padding-top: 4rem;
+        }
+
+        #myprojects {
+            background-color: #e2edff;
+        }
+
+        #aboutme {
+            background-color: #ffffff;
+        }
+    </style>
     <title>Hello, world!</title>
 </head>
 
