--- a/gabut/ensakal.html
+++ b/gabut/ensakal.html
@@ -150,7 +150,7 @@
                         <div class="mb-3">
                             <label for="p_lubang" class="form-label">Lubang</label>
                             <div class="input-group">
-                                <input type="number" class="form-control" id="p_lubang" placeholder="10" value="35"
+                                <input type="number" class="form-control" id="p_lubang" placeholder="10" value="0"
                                     maxlength="12400" minlength="0">
                                 <span class="input-group-text">pcs</span>
                             </div>
@@ -160,7 +160,7 @@
                             <label for="p_swl" class="form-label">Selegenje dan WL</label>
                             <div class="input-group">
                                 <input type="number" class="form-control text-right" id="p_swl" placeholder="10"
-                                    value="207" maxlength="">
+                                    value="0" maxlength="12400">
                                 <span class="input-group-text">pcs</span>
                             </div>
                         </div>
