--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <p class="lead">Have a Nice Day</p>
         <div class="row">
             <div class="col">
-                <a href="gabut/bersyukur.html" class="btn btn-primary">Really</a>
+                <a href="kalkulator/ensakal.html" class="btn btn-primary">Kalkulator ENSA</a>
+                <a href="kalkulator/bersyukur.html" class="btn btn-primary">Becanda</a>
             </div>
         </div>
     </section>
